해야할 것 기입, 초기 기획 필요

--- a/School/src/main/resources/application.properties
+++ b/School/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8081
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+# connect MYSQL
+#spring.datasource.dbcp2.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.dbcp2.url=jdbc:mysql://localhost:3306/databaseName?serverTimezone=UTC&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=mysql
