--- a/School/pom.xml
+++ b/School/pom.xml
@@ -49,15 +49,21 @@
 		    <version>1.16</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.oracle.database.jdbc</groupId>
+		    <artifactId>ojdbc10</artifactId>
+		    <version>19.17.0.0</version>
+		</dependency>
+		
 		<!--<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>jstl</artifactId>
-		</dependency>
+		</dependency>-->
 		
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>-->
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
