--- a/School/src/main/resources/application.properties
+++ b/School/src/main/resources/application.properties
@@ -3,8 +3,16 @@ server.port=8081
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-# connect MYSQL
-#spring.datasource.dbcp2.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.dbcp2.url=jdbc:mysql://localhost:3306/databaseName?serverTimezone=UTC&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=mysql
+# connect ORACLE
+spring.datasource.hikari.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.hikari.username=school
+spring.datasource.hikari.password=oracle
+spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
+
+spring.jpa.database=oracle
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.show-sql=true
