maven update시 exclude remove해줘야 하는 오류 해결

--- a/School/src/main/resources/application.properties
+++ b/School/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.mvc.view.suffix=.jsp
 # connect ORACLE
 spring.datasource.hikari.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.hikari.username=school
+spring.datasource.hikari.username=oracle
 spring.datasource.hikari.password=oracle
 spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
 
