--- a/School/pom.xml
+++ b/School/pom.xml
@@ -55,10 +55,10 @@
 		    <version>19.17.0.0</version>
 		</dependency>
 		
-		<!--<dependency>
+		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>jstl</artifactId>
-		</dependency>-->
+		</dependency>
 		
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
